[gd_scene load_steps=26 format=3 uid="uid://5hycu6plf1cj"]

[ext_resource type="Texture2D" uid="uid://bhnpcef7h21iw" path="res://backgrounds/black hole ending.png" id="1_tkj83"]
[ext_resource type="AudioStream" uid="uid://1brjnq3sn60a" path="res://Audio/maintheme_slow.mp3" id="2_cueff"]
[ext_resource type="Script" path="res://Scripts/Ending.gd" id="2_vfk3y"]
[ext_resource type="Texture2D" uid="uid://cop1i12srdub4" path="res://backgrounds/fast_food_counter.png" id="3_5v23k"]
[ext_resource type="Script" path="res://Scripts/MusicPlayer.gd" id="3_whqhd"]
[ext_resource type="Texture2D" uid="uid://dhtugets0fbdw" path="res://backgrounds/sacrifice_ending.png" id="4_ou6or"]
[ext_resource type="Texture2D" uid="uid://byqlxbmrjdr8v" path="res://backgrounds/Bucketina Ending.png" id="5_fllne"]
[ext_resource type="SystemFont" uid="uid://du7nb5r5ek6vi" path="res://Assets/comic_sans.tres" id="5_yw5ah"]
[ext_resource type="Texture2D" uid="uid://ibbb635aqrkj" path="res://backgrounds/Pixel_Dance_Ares.png" id="6_v50h1"]
[ext_resource type="Texture2D" uid="uid://5w1snchg7r8k" path="res://backgrounds/Sad-Kun.png" id="7_dciqy"]
[ext_resource type="Texture2D" uid="uid://boyb2b07wdqxh" path="res://backgrounds/bucketinabad.png" id="8_cucms"]
[ext_resource type="Texture2D" uid="uid://clm4ura21rq8b" path="res://backgrounds/ares_bad_end.png" id="9_c56w7"]
[ext_resource type="Texture2D" uid="uid://hgnusyfhjb" path="res://images/Cursor-Kun - Pink.png" id="9_jmv6h"]
[ext_resource type="Script" path="res://Scenes/pink_kun_special.gd" id="10_2m3wg"]

[sub_resource type="Animation" id="Animation_10pho"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_tkj83")]
}

[sub_resource type="Animation" id="Animation_tqmww"]
resource_name = "ares_bad"

[sub_resource type="Animation" id="Animation_l12uy"]
resource_name = "ares_bad_end"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_c56w7")]
}

[sub_resource type="Animation" id="Animation_q80dq"]
resource_name = "ares_normal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_v50h1")]
}

[sub_resource type="Animation" id="Animation_su7ox"]
resource_name = "blackhole"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_tkj83")]
}

[sub_resource type="Animation" id="Animation_dj51u"]
resource_name = "bucketina_bad"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_cucms")]
}

[sub_resource type="Animation" id="Animation_lp5ey"]
resource_name = "bucketina_normal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_fllne")]
}

[sub_resource type="Animation" id="Animation_88nwi"]
resource_name = "fastfood"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_5v23k")]
}

[sub_resource type="Animation" id="Animation_2tos3"]
resource_name = "sacrifice"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_ou6or")]
}

[sub_resource type="Animation" id="Animation_qifhn"]
resource_name = "sad_kun"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_dciqy")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vaa73"]
_data = {
"RESET": SubResource("Animation_10pho"),
"ares_bad": SubResource("Animation_tqmww"),
"ares_bad_end": SubResource("Animation_l12uy"),
"ares_normal": SubResource("Animation_q80dq"),
"blackhole": SubResource("Animation_su7ox"),
"bucketina_bad": SubResource("Animation_dj51u"),
"bucketina_normal": SubResource("Animation_lp5ey"),
"fastfood": SubResource("Animation_88nwi"),
"sacrifice": SubResource("Animation_2tos3"),
"sad_kun": SubResource("Animation_qifhn")
}

[node name="world_root" type="Node2D"]

[node name="EndingImage" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_tkj83")
script = ExtResource("2_vfk3y")

[node name="AnimationPlayer" type="AnimationPlayer" parent="EndingImage"]
libraries = {
"": SubResource("AnimationLibrary_vaa73")
}

[node name="Cursor-kun-Pink" type="Sprite2D" parent="." node_paths=PackedStringArray("ending_image")]
position = Vector2(957, 318)
rotation = 3.14159
scale = Vector2(0.664021, -0.664021)
texture = ExtResource("9_jmv6h")
script = ExtResource("10_2m3wg")
ending_image = NodePath("../EndingImage")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_cueff")
autoplay = true
script = ExtResource("3_whqhd")
main_theme = "res://Audio/maintheme_slow.mp3"

[node name="CreditsButton" type="Button" parent="."]
offset_left = 1005.0
offset_top = 8.0
offset_right = 1146.0
offset_bottom = 77.0
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("5_yw5ah")
theme_override_font_sizes/font_size = 25
text = "CREDITS"

[node name="RestartButton" type="Button" parent="."]
offset_left = 1005.0
offset_top = 90.0
offset_right = 1146.0
offset_bottom = 159.0
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("5_yw5ah")
theme_override_font_sizes/font_size = 25
text = "RESTART"

[node name="QuitButton" type="Button" parent="."]
offset_left = 1005.0
offset_top = 168.0
offset_right = 1146.0
offset_bottom = 237.0
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("5_yw5ah")
theme_override_font_sizes/font_size = 25
text = "QUIT"

[connection signal="finished" from="MusicPlayer" to="MusicPlayer" method="_on_finished"]
[connection signal="button_down" from="CreditsButton" to="EndingImage" method="_on_credits_button_down"]
[connection signal="button_down" from="RestartButton" to="EndingImage" method="_on_restart_button_down"]
[connection signal="button_down" from="QuitButton" to="EndingImage" method="_on_quit_button_down"]
